# airplayer

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
.github/workflows/: apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_dnssd_shim.c  android_dnssd_shim.h  android_raop_callbacks.c  android_raop_callbacks.h  native_bridge.cpp
app/src/main/cpp/cmake/: PatchOpenSSL.cmake  scrub_mkbuildinf.cmake
app/src/main/kotlin/io/github/seancheung/airplayer/: AirPlayApp.kt  BootReceiver.kt  MainActivity.kt  Prefs.kt
app/src/main/kotlin/io/github/seancheung/airplayer/audio/: DacpController.kt  DmapParser.kt  TrackInfo.kt
app/src/main/kotlin/io/github/seancheung/airplayer/bridge/: NativeBridge.kt  RaopCallbackHandler.kt
app/src/main/kotlin/io/github/seancheung/airplayer/discovery/: NsdServiceManager.kt
app/src/main/kotlin/io/github/seancheung/airplayer/renderer/: AudioRenderer.kt  HlsVideoPlayer.kt  VideoRenderer.kt
app/src/main/kotlin/io/github/seancheung/airplayer/service/: AirPlayService.kt
app/src/main/kotlin/io/github/seancheung/airplayer/ui/: HlsVideoView.kt  LogsScreen.kt  MainScreen.kt  MirroringView.kt  SettingsScreen.kt  TvFocus.kt
app/src/main/kotlin/io/github/seancheung/airplayer/ui/theme/: Theme.kt
app/src/main/kotlin/io/github/seancheung/airplayer/viewmodel/: MainViewModel.kt
app/src/main/res/drawable/: banner.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_pip.xml
app/src/main/res/layout/: hls_player_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
